# Scalable-Meta-Learning-with-Gaussian-Processes

./: .gitignore  3rd-party-licenses.txt  README.md  pyproject.toml
.github/workflows/: python.yaml
scamlgp/: model.py  optimizer.py  testing.py  utils.py
scamlgp/benchmarking/: bbo_helper.py  experiment_config_utils.py  local_runner.py  plotting.py  utils.py
scamlgp/benchmarking/benchmarks/: __init__.py  api.py  base.py  branin.py  fcnet_fixed_fidelity_tabular.py  hartmann_3d.py  hartmann_6d.py  hpo_bench_tabular.py  pd1.md  pd1.py  quadratic.py
scamlgp/benchmarking/configurations/: ablations_summary.py  branin.py  branin_ablation_num_meta_tasks.py  branin_ablation_num_points_per_task.py  fcnet_tabular.py  figure_hpo.py  figure_synthetic.py  hartmann3.py  hartmann6.py  hartmann6_ablation_num_meta_tasks.py  hartmann6_ablation_num_points_per_task.py  lr_tabular.py  nn_tabular.py  pd1.py  rf_tabular.py  styles.py  svm_tabular.py  xgb_tabular.py
scamlgp/benchmarking/functions/: base.py  branin.py  hartmann.py  quadratic.py
scamlgp/benchmarking/noise/: base.py  benchmark.py  homoscedastic.py
tests/: conftest.py  meta_data_examples.py  optimizer_test.py
tests/benchmarking/: base_test.py  benchmarks_test.py  functions_test.py  noise_test.py  utils.py  utils_test.py
