[tool.poetry]
name = "scamlgp"
version = "0.1.0"
description = ""
authors = [
    "Petru Tighineanu <Petru.Tighineanu@de.bosch.com>",
    "Lukas Grossberger <Lukas.Grossberger@de.bosch.com>"
]
license = "AGPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
blackboxopt = {version="^5.0.2", extras=["botorch"]}
pandas = "^2.2.0"
matplotlib = "^3.8.3"
configspace = {version="^0.4.20", optional=true}
hpobench = {git = "https://github.com/automl/HPOBench.git", optional=true}
h5py = {version="^3.10.0", optional=true}
openml = {version="^0.14.2", optional=true}

[tool.poetry.extras]
benchmarking=["configspace", "hpobench", "h5py", "openml"]

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pytest = "^7.4.4"
ruff = "^0.2.2"

[tool.ruff]
# Enable pycodestyle, Pyflakes, isort
select = ["E", "F", "I"]
ignore = []
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]
line-length = 88
# Ignore unused import in __init__.py files
per-file-ignores = { "__init__.py" = ["F401"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
